[project]
name = "web-hw-05"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Matiukha",email = "olehmatiukha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.11.13,<4.0.0)",
    "websockets (>=15.0,<16.0)",
    "aiopath (==0.6) ; python_version >= \"3.10\" and python_version < \"4\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
